[gd_scene load_steps=4 format=3 uid="uid://bedmwoe6b3bxa"]

[ext_resource type="AudioStream" uid="uid://c12hj25s4rtnp" path="res://assets/audio/sfx/pop.wav" id="1_uaq87"]
[ext_resource type="Texture2D" uid="uid://bkb0m1qugf4rh" path="res://assets/images/menu/Play1.png" id="2_3ycb7"]
[ext_resource type="Script" path="res://scenes/scripts/Button.gd" id="3_vfgpa"]

[node name="MenuButton" type="Node2D" node_paths=PackedStringArray("sfx", "button")]
script = ExtResource("3_vfgpa")
sfx = NodePath("MenuSFX")
button = NodePath("PlayButton")

[node name="MenuSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_uaq87")
bus = &"SFX"

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = -228.0
offset_top = -74.0
offset_right = 236.0
offset_bottom = 80.0
texture_normal = ExtResource("2_3ycb7")
texture_pressed = ExtResource("2_3ycb7")
texture_hover = ExtResource("2_3ycb7")

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
